docs/v0.10.0/_files/_assets/attributes.adoc
// AsciiDoc settings
:data-uri!:
:doctype: book
:experimental:
:idprefix:
:imagesdir: images
:numbered:
:sectanchors!:
:sectnums:
:source-highlighter: highlight.js
:toc: left
:linkattrs:
:toclevels: 2
:icons: font

//Latest version
:KroxyliciousVersion: 0.10
:gitRef: releases/tag/v0.10.0
:ApicurioVersion: 2.6.x

//Proxy links
:github: https://github.com/kroxylicious/kroxylicious
:github-releases: https://github.com/kroxylicious/kroxylicious/{gitRef}
:github-issues: https://github.com/kroxylicious/kroxylicious/issues
:api-javadoc: https://javadoc.io/doc/io.kroxylicious/kroxylicious-api/{KroxyliciousVersion}
:kms-api-javadoc: https://javadoc.io/doc/io.kroxylicious/kroxylicious-kms/{KroxyliciousVersion}
:encryption-api-javadoc: https://javadoc.io/doc/io.kroxylicious/kroxylicious-encryption/{KroxyliciousVersion}
:start-script: https://github.com/kroxylicious/kroxylicious/blob/{gitRef}/kroxylicious-app/src/assembly/kroxylicious-start.sh

//Kafka links
:ApacheKafkaSite: https://kafka.apache.org[Apache Kafka website^]
:kafka-protocol: https://kafka.apache.org/protocol.html

//java links
:java-17-javadoc: https://docs.oracle.com/en/java/javase/17/docs/api
:java-17-specs: https://docs.oracle.com/en/java/javase/17/docs/specs

//Vault links
:hashicorp-vault: https://developer.hashicorp.com/vault

//Fortanix DSM links
:fortanix-dsm: https://www.fortanix.com/platform/data-security-manager
:fortanix-support: https://support.fortanix.com/

//AWS links
:aws:  https://docs.aws.amazon.com/

// Apicurio links
:apicurio-docs: https://www.apicur.io/registry/docs/apicurio-registry/{ApicurioVersion}/

// Conditional inclusion flags
:include-fortanix-dsm-kms: 1
:include-aws-kms-service-config-identity-ec2-metadata: 1